Closed
Bug 290375
Opened 21 years ago
Closed 20 years ago
Switching tabs while download manager is auto-closing causes all windows to close
Categories
(Camino Graveyard :: Preferences, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino0.9
People
(Reporter: ender.mb, Assigned: sfraser_bugs)
Details
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050414 Camino/0.8+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050414 Camino/0.8+
This is a very strange bug. If your download manager is set to auto-close on
completing a download, and you happen to be switching tabs with the shortcut
keys (cmd+opt+left/right) at the moment a downlad finishes, all open Camino
windows will close instead of just the download manager. This does not seem to
happen when switching tabs via the mouse.
Reproducible: Always
Steps to Reproduce:
1. Make sure Preferences > Downloads > Close Downloads window is checked.
2. Begin a download.
3. When the download is about to finish, repeatedly switch tabs with
cmd+opt+right or cmd+opt+left.
Actual Results:
All Camino windows close.
Expected Results:
Only the download manager should close.
Comment 1•21 years ago
|
||
This is weird.
I'm confirming with the 04/02 build. I'm targetting for 1.0 with the camino0.9?
flag. CCing Josh as well.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: camino0.9?
Target Milestone: --- → Camino1.0
Severity: normal → major
Flags: camino0.9? → camino0.9+
Target Milestone: Camino1.0 → Camino0.9
Comment 2•21 years ago
|
||
this sounds pretty bad, i say we keep this on the 09 radar. any ideas josh?
Comment 3•20 years ago
|
||
This has happened to me twice this morning. Is anyone still looking at this?
(Also, CCing Simon)
| Assignee | ||
Comment 4•20 years ago
|
||
This happens because if you have the option key down while calling
-performClose:, it closes all windows.
Assignee: pinkerton → sfraser_bugs
| Assignee | ||
Comment 5•20 years ago
|
||
Fixed by calling -close on the ProgressDlgController, rather than -performClose:
on the window. Also moved the code into the ProgressDlgController.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•