Fix bug 290375: if option key is down when a download completes, and you have the dl manager set to auto-hide, then all windows get closed. Fixed by using -close rather than -performClose: (and moving the code where it belongs).