camino/src/download/ProgressDlgController.h
@@ -100,7 +100,7 @@
 -(int)numDownloadsInProgress;
 -(void)clearAllDownloads;
 -(void)didStartDownload:(id <CHDownloadProgressDisplay>)progressDisplay;
--(void)didEndDownload:(id <CHDownloadProgressDisplay>)progressDisplay;
+-(void)didEndDownload:(id <CHDownloadProgressDisplay>)progressDisplay withSuccess:(BOOL)completedOK;
 -(void)removeDownload:(id <CHDownloadProgressDisplay>)progressDisplay;
 -(NSApplicationTerminateReply)allowTerminate;
 
